force-app/main/default/objects/FieloEE__Like__c/FieloEE__Like__c.object-meta.xml
<CustomObject>
    <description>Members that pressed the Like button of a content feed or a reward.</description>
    <label>Like</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Like Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Like</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>