force-app/main/default/objects/FieloEE__Like__c/fields/FieloEE__Member__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>FieloEE__Member__c</referenceTo>
    <relationshipLabel>Likes</relationshipLabel>
    <relationshipName>Likes</relationshipName>
    <type>Lookup</type>
</CustomField>