force-app/main/default/objects/FieloEE__Like__c/fields/FieloEE__News__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__News__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Content feed</label>
    <referenceTo>FieloEE__News__c</referenceTo>
    <relationshipLabel>Like</relationshipLabel>
    <relationshipName>Likes</relationshipName>
    <type>Lookup</type>
</CustomField>