force-app/main/default/objects/FieloEE__Like__c/fields/FieloEE__ParentId__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ParentId__c</fullName>
    <label>Parent Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>